Ça compile maintenant, de rien...............

--- a/Zia/CMakeLists.txt
+++ b/Zia/CMakeLists.txt
@@ -5,6 +5,9 @@ PROJECT(Zia CXX)
 # Where the binaries will be
 SET(EXECUTABLE_OUTPUT_PATH bin/${CMAKE_BUILD_TYPE})
 
+SET(CMAKE_CXX_STANDARD 14)
+SET(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 
 INCLUDE_DIRECTORIES(
 	../Submodule_Zia/
